<resources>
    <string name="copyright_osm">Map data © OpenStreetMap contributors</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_mypreferences">Theme Settings</string>
    <string name="cancelbutton">Cancel</string>
    <string name="okbutton">OK</string>
    <string name="btSettings">SETTINGS\nAND MORE</string>
    <string name="btThemes">THEMES</string>
    <string name="btStatistic">STATISTIC</string>
    <string name="btDashboard">BOARD</string>
    <string name="btHeightProfile">HEIGHT\nPROFILE</string>
    <string name="btCenterOn">CENTER\nON</string>
    <string name="btCenterOff">CENTER\nOFF</string>
    <string name="btGpsOn">GPS\nON</string>
    <string name="btGpsOff">GPS\nOFF</string>
    <string name="btRecordTrack">TRACK\nRECORD</string>
    <string name="btBB">BOUNDING\nBOX</string>
    <string name="btLoadTrack">LOAD\nTRACK</string>
    <string name="btHideTrack">HIDE\nTRACK</string>
    <string name="btMarkerTrack">MARKER\nTRACK</string>
    <string name="btRoute">ROUTE</string>
    <string name="btStartTrack">START\nTRACK</string>
    <string name="btStartSegment">START\nSEGMENT</string>
    <string name="btStopSegment">STOP\nSEGMENT</string>
    <string name="btStopTrack">STOP\nTRACK</string>
    <string name="btNewBB">NEW</string>
    <string name="btLoadBB">LOAD</string>
    <string name="btHideBB">HIDE</string>
    <string name="btLoadTSFromBBAll">LOAD STORE\nALL</string>
    <string name="btLoadTSFromBB">LOAD STORE\nREMAINING</string>
    <string name="btDropTSFromBB">DROP STORE\nALL</string>
    <string name="btLoadNext">NEXT</string>
    <string name="btLoadPrev">PREV</string>
    <string name="btLoadFromBB">FROM BB</string>
    <string name="btHideAll">ALL</string>
    <string name="btHideUnselected">NOT\nSELECTED</string>
    <string name="btHideSelected">SELECTED</string>
    <string name="btMarkerModify1">CREATE</string>
    <string name="btMarkerModify2">MODIFY</string>
    <string name="btMDeleteAll">DELETE\nALL</string>
    <string name="btMTImport">IMPORT</string>
    <string name="btMTExport">EXPORT</string>
    <string name="btMStop">MARKER\nSTOP</string>
    <string name="btRouteOn">ROUTE\nON</string>
    <string name="btRouteOff">ROUTE\nOFF</string>
    <string name="btRouteOptimize">ROUTE\nOPTIMIZE</string>
    <string name="btRouteExport">ROUTE\nEXPORT</string>
    <string name="ctx_stat_del_track">Delete track</string>
    <string name="ctx_stat_hpr_track">Height profile</string>
    <string name="ctx_stat_stl_track">Show track</string>
    <string name="ctx_stat_mtl_track">Marker track</string>
    <string name="ctx_stat_shr_track">Share track</string>
    <string name="ctx_stat_sav_track">Save track</string>
    <string name="my_rendertheme_menu_key">myrenderthememenu</string>
    <string name="preferences_cat_settings_key">Settings</string>
    <string name="preferences_cat_actions_key">Actions</string>
    <string name="preferences_cat_info_key">Infos</string>
    <string name="preferences_scale_key">scale</string>
    <string name="preferences_scale">Display Scale</string>
    <string name="preferences_scale_desc">Adjust scale of the map display</string>
    <string name="preferences_language">Multilingual Map Language Selection</string>
    <string name="preferences_language_key">language_selection</string>
    <string name="preferences_language_desc">Select language of multilingual map (multilingual map must be loaded)</string>
    <string name="preferences_language_showlocal">Language Display Style</string>
    <string name="preferences_language_showlocal_desc">Show both local and preferred language</string>
    <string name="preferences_scalebar">Scale bar</string>
    <string name="preferences_scalebar_desc">Set units system on the scale bar</string>
    <string name="preferences_scalebar_key">scalebar</string>
    <string name="preferences_scalebar_metric_key">metric</string>
    <string name="preferences_scalebar_imperial_key">imperial</string>
    <string name="preferences_scalebar_nautical_key">nautical</string>
    <string name="preferences_scalebar_both_key">both</string>
    <string name="preferences_scalebar_none_key">none</string>
    <string name="preferences_textwidth">Maximum Textwidth</string>
    <string name="preferences_textwidth_key">textwidth</string>
    <string name="preferences_textwidth_desc">Debugging aid for setting maximum textwidth</string>
    <string name="preferences_category_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering_key">wayfiltering</string>
    <string name="preferences_wayfiltering_desc">Way filtering reduces the number of ways returned at the risk of clipping artifacts</string>
    <string name="preferences_wayfiltering_distance">Way filter size</string>
    <string name="preferences_wayfiltering_distance_key">wayfiltering_distance</string>
    <string name="preferences_wayfiltering_distance_desc">The higher the number the less artifacts, but slower</string>
    <string name="preferences_category_tilecache">Tile cache</string>
    <string name="preference_choose_map_title">Select map layers</string>
    <string name="preference_choose_map_summary">Define content for map layers 1..5</string>
    <string name="preference_choose_map_key1">SelectMap1</string>
    <string name="preference_choose_map_title1">Select map layer 1 (Background)</string>
    <string name="preference_choose_map_key2">SelectMap2</string>
    <string name="preference_choose_map_title2">Select map layer 2 </string>
    <string name="preference_choose_map_key3">SelectMap3</string>
    <string name="preference_choose_map_title3">Select map layer 3 </string>
    <string name="preference_choose_map_key4">SelectMap4</string>
    <string name="preference_choose_map_title4">Select map layer 4 </string>
    <string name="preference_choose_map_key5">SelectMap5</string>
    <string name="preference_choose_map_title5">Select map layer 5 (Foreground)</string>
    <string name="preference_apply_map_layers_key">ApplyMapLayers</string>
    <string name="preference_apply_map_layers_title">Apply map layers</string>
    <string name="preference_choose_theme_key">SelectTheme</string>
    <string name="preference_choose_theme_title">Select theme</string>
    <string name="preference_choose_search_key">SelectSearchProvider</string>
    <string name="preference_choose_search_title">Select Search Provider</string>
    <string name="preferences_screen_further_title">Further Settings</string>
    <string name="preferences_screen_further_desc">Further Mapsforge, Gain/Loss and Developer Settings</string>
    <string name="preferences_mapsforge_title">Mapsforge Settings</string>
    <string name="preferences_debug_timing">Debug timing</string>
    <string name="preferences_debug_timing_key">debug_timing</string>
    <string name="preferences_debug_timing_desc">Measure rendering time</string>
    <string name="preferences_rendering_threads">Number of threads to render concurrently</string>
    <string name="preferences_rendering_threads_key">rendering_threads</string>
    <string name="preferences_rendering_threads_desc">Minimum 1</string>
    <string name="preferences_way_details_key">way_details</string>
    <string name="preferences_way_details_title">Way details</string>
    <string name="preferences_way_details_desc">Visualize way details of a taped way</string>
    <string name="preferences_mkr_auto_key">no_recreate_auto_marker_settings</string>
    <string name="preferences_mkr_auto_title">Automatic marker settings</string>
    <string name="preferences_mkr_auto_desc">Do automatically set marker settings ("Show marker track" and  "Snap to way").</string>
    <string name="preferences_dev_mtl_key">no_recreate_show_marker_track</string>
    <string name="preferences_dev_mtl_title">Show marker track</string>
    <string name="preferences_dev_mtl_desc">Visualize the marker track</string>
    <string name="preferences_dev_snap2way_key">no_recreate_snap_to_way</string>
    <string name="preferences_dev_snap2way_title">Snap to way</string>
    <string name="preferences_dev_snap2way_desc">Snap marker points automatically to close ways.</string>
    <string name="preferences_mtr_key">multi_thread_rendering</string>
    <string name="preferences_mtr_title">Multi thread rendering</string>
    <string name="preferences_mtr_desc">Use multi thread rendering (caution: this can cause stability issues)</string>
    <string name="preferences_cat_gl_title">Gain/Loss settings</string>
    <string name="preferences_cat_dev_title">Developer settings</string>
    <string name="preferences_stl_gl_key">stl_gl</string>
    <string name="preferences_stl_gl_title">Selected track with gain/loss</string>
    <string name="preferences_stl_gl_desc">Visualize the selected track with colors based on gain/loss."</string>
    <string name="preferences_hprof_gl_key">hprof_gl</string>
    <string name="preferences_hprof_gl_title">Ascent height profile</string>
    <string name="preferences_hprof_gl_desc">Show ascent profile together with height profile"</string>
    <string name="preferences_screen_download">Download</string>
    <string name="preferences_screen_desc_download">Download Maps and Software</string>
    <string name="preferences_dl_maps_title">Download Maps from openandromaps</string>
    <string name="preferences_dl_maps_desc">Download of maps form www.openandromaps.org. Select the map you want to download, open the \"+\" in front of the name and finally
        select the entry \"Android mf-V4-map\" and click on the button \"Install others\"
    </string>
    <string name="preferences_dl_maps_wd_key">DldMapsKey</string>
    <string name="preferences_dl_maps_wd_title">World</string>
    <string name="preferences_dl_maps_wd_desc">Download Maps from world</string>
    <string name="preferences_dl_maps_eu_key">DldMapsEUKey</string>
    <string name="preferences_dl_maps_eu_title">Europa</string>
    <string name="preferences_dl_maps_eu_desc">Download a european map</string>
    <string name="preferences_dl_maps_de_key">DldMapsDEKey</string>
    <string name="preferences_dl_maps_de_title">Germany</string>
    <string name="preferences_dl_maps_de_desc">Download map for germany</string>
    <string name="preferences_dl_theme_title">Download Theme</string>
    <string name="preferences_dl_theme_desc">Go to the elevate 4 theme section and
        select the following button: \"Standard Karten App\"
    </string>
    <string name="preferences_dl_theme_el_key">DldThemeElKey</string>
    <string name="preferences_dl_theme_el_title">Download Elevate Theme</string>
    <string name="preferences_dl_theme_el_desc">Download Elevate 4 Theme</string>
    <string name="preferences_dl_sw_title">Download Software</string>
    <string name="preferences_dl_sw_desc">Download new apk from https://github.com/mg4gh/MGMapViewer</string>
    <string name="preferences_dl_sw_latest_key">DldSWLatestKey</string>
    <string name="preferences_dl_sw_latest_title">Download and Install latest apk</string>
    <string name="preferences_dl_sw_latest_desc">Download and Install the latest apk from https://github.com/mg4gh/MGMapViewer</string>
    <string name="preferences_dl_sw_other_key">DldSWOtherKey</string>
    <string name="preferences_dl_sw_other_title">Download other apk</string>
    <string name="preferences_dl_sw_other_desc">Download the other apk from https://github.com/mg4gh/MGMapViewer</string>
    <string name="preferences_doc_main_key">DocMain</string>
    <string name="preferences_doc_main_title">Documentation</string>
    <string name="preferences_doc_main_desc">Go to the github.io main documentation page.</string>
    <string name="preferences_version_key">versionKey</string>
    <string name="preferences_version_title">App Version</string>
    <string name="preferences_version_desc">-</string>
</resources>