<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:title="@string/preferences_mapsforge_title"
        app:iconSpaceReserved="false"

        >

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/pref_scale_entries"
            app:entryValues="@array/pref_scale_values"
            app:key="@string/preferences_scale_key"
            app:negativeButtonText="@string/cancelbutton"
            app:summary="@string/preferences_scale_desc"
            app:title="@string/preferences_scale"
            app:iconSpaceReserved="false"
            />
        <ListPreference
            app:defaultValue="metric"
            app:entries="@array/pref_scalebar_entries"
            app:entryValues="@array/pref_scalebar_values"
            app:key="scalebar"
            app:negativeButtonText="@string/cancelbutton"
            app:summary="@string/preferences_scalebar_desc"
            app:title="@string/preferences_scalebar"
            app:iconSpaceReserved="false"
            />
        <ListPreference
            app:defaultValue="de"
            app:entries="@array/pref_language_selection_entries"
            app:entryValues="@array/pref_language_selection_values"
            app:key="language_selection"
            app:negativeButtonText="@string/cancelbutton"
            app:summary="@string/preferences_language_desc"
            app:title="@string/preferences_language"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/preferences_cat_gl_title"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/preferences_stl_gl_key"
            app:summary="@string/preferences_stl_gl_desc"
            app:title="@string/preferences_stl_gl_title"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/preferences_hprof_gl_key"
            app:summary="@string/preferences_hprof_gl_desc"
            app:title="@string/preferences_hprof_gl_title"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_cat_dev_title"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        >
        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/preferences_way_details_key"
            app:summary="@string/preferences_way_details_desc"
            app:title="@string/preferences_way_details_title"
            app:iconSpaceReserved="false"
            />
        <!--SwitchPreference
            app:defaultValue="false"
            app:key="@string/preferences_mtr_key"
            app:summary="@string/preferences_mtr_desc"
            app:title="@string/preferences_mapsforge_title"
            app:iconSpaceReserved="false"
            /-->

    </PreferenceCategory>

</PreferenceScreen>