<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_preferences">

    <PreferenceScreen android:title="@string/preferences_screen_storage_pref">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preferences_storage_key"
            android:summary="@string/preferences_storage_desc"
            android:title="@string/preferences_storage_title" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/preference_choose_map_title">
        <mg.mapviewer.util.DynamicListPreference
            android:key="@string/preference_choose_map_key1"
            android:title="@string/preference_choose_map_title1" />
        <mg.mapviewer.util.DynamicListPreference
            android:key="@string/preference_choose_map_key2"
            android:title="@string/preference_choose_map_title2" />

        <mg.mapviewer.util.DynamicListPreference
            android:key="@string/preference_choose_map_key3"
            android:title="@string/preference_choose_map_title3" />
        <mg.mapviewer.util.DynamicListPreference
            android:key="@string/preference_choose_map_key4"
            android:title="@string/preference_choose_map_title4" />
        <mg.mapviewer.util.DynamicListPreference
            android:key="@string/preference_choose_map_key5"
            android:title="@string/preference_choose_map_title5" />
    </PreferenceScreen>
    <mg.mapviewer.util.DynamicListPreference
        android:key="@string/preference_choose_theme_key"
        android:title="@string/preference_choose_theme_title" />
    <mg.mapviewer.util.DynamicListPreference
        android:key="@string/preference_choose_search_key"
        android:title="@string/preference_choose_search_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/preferences_way_details_key"
        android:summary="@string/preferences_way_details_desc"
        android:title="@string/preferences_way_details_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/preferences_stl_gl_key"
        android:summary="@string/preferences_stl_gl_desc"
        android:title="@string/preferences_stl_gl_title" />

    <PreferenceScreen android:title="@string/preferences_screen_further_pref">
        <ListPreference
            android:defaultValue="1.0"
            android:entries="@array/pref_scale_entries"
            android:entryValues="@array/pref_scale_values"
            android:key="@string/preferences_scale_key"
            android:negativeButtonText="@string/cancelbutton"
            android:summary="@string/preferences_scale_desc"
            android:title="@string/preferences_scale" />
<!--        <ListPreference-->
<!--            android:defaultValue="0.7"-->
<!--            android:entries="@array/pref_textwidth_entries"-->
<!--            android:entryValues="@array/pref_textwidth_values"-->
<!--            android:key="textwidth"-->
<!--            android:negativeButtonText="@string/cancelbutton"-->
<!--            android:summary="@string/preferences_textwidth_desc"-->
<!--            android:title="@string/preferences_textwidth" />-->
        <ListPreference
            android:defaultValue="metric"
            android:entries="@array/pref_scalebar_entries"
            android:entryValues="@array/pref_scalebar_values"
            android:key="scalebar"
            android:negativeButtonText="@string/cancelbutton"
            android:summary="@string/preferences_scalebar_desc"
            android:title="@string/preferences_scalebar" />
        <ListPreference
            android:defaultValue="de"
            android:entries="@array/pref_language_selection_entries"
            android:entryValues="@array/pref_language_selection_values"
            android:key="language_selection"
            android:negativeButtonText="@string/cancelbutton"
            android:summary="@string/preferences_language_desc"
            android:title="@string/preferences_language" />
<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="language_showlocal"-->
<!--            android:summary="@string/preferences_language_showlocal_desc"-->
<!--            android:title="@string/preferences_language_showlocal" />-->
<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="debug_timing"-->
<!--            android:summary="@string/preferences_debug_timing_desc"-->
<!--            android:title="@string/preferences_debug_timing" />-->
<!--        <EditTextPreference-->
<!--            android:defaultValue="1"-->
<!--            android:inputType="number"-->
<!--            android:key="rendering_threads"-->
<!--            android:summary="@string/preferences_rendering_threads_desc"-->
<!--            android:title="@string/preferences_rendering_threads" />-->
<!--        <PreferenceScreen android:title="@string/preferences_category_wayfiltering">-->
<!--            <CheckBoxPreference-->
<!--                android:defaultValue="true"-->
<!--                android:key="@string/preferences_wayfiltering_key"-->
<!--                android:summary="@string/preferences_wayfiltering_desc"-->
<!--                android:title="@string/preferences_wayfiltering" />-->
<!--            <EditTextPreference-->
<!--                android:defaultValue="20"-->
<!--                android:dependency="wayfiltering"-->
<!--                android:inputType="number"-->
<!--                android:key="wayfiltering_distance"-->
<!--                android:summary="@string/preferences_wayfiltering_distance_desc"-->
<!--                android:title="@string/preferences_wayfiltering_distance" />-->
<!--        </PreferenceScreen>-->
    </PreferenceScreen>

</PreferenceScreen>
